[package]
name = "box3d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0-rc.5", features = ["dynamic_linking"] }

bevy_egui = "0.34.0-rc.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
debug = true
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
